--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "*"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -39,5 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  }  
 }
