--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@playwright/test": "^1.43.0",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -24,9 +25,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build",    
+    "eject": "react-scripts eject",
     "test_jest": "jest --config ./src/jest.config.js",
-    "eject": "react-scripts eject"    
+    "test_playwright": "npx playwright test --config=./src/playwright.config.ts"
   },
   "eslintConfig": {
     "extends": [
