--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@playwright/test": "^1.43.0",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
@@ -25,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",    
+    "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test_jest": "jest --config ./src/jest.config.js",
     "test_playwright": "npx playwright test --config=./src/playwright.config.ts"
